--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "to-do-list-m2",
+  "jest": {
+    "resetMocks": false,
+    "testEnvironment": "jsdom",
+    "setupFiles": [
+      "jest-localstorage-mock"
+    ]
+  },
   "version": "1.0.0",
-  "description": "",
+  "description": "<a name=\"readme-top\"></a>",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "start": "webpack serve --open",
     "build": "webpack"
   },
@@ -20,22 +27,30 @@
   },
   "homepage": "https://github.com/AlselwiAisha/To-Do-list-M2#readme",
   "devDependencies": {
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
     "babel-eslint": "^10.1.0",
-    "css-loader": "^6.8.1",
+    "babel-jest": "^29.0.1",
+    "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.28.0",
-    "hint": "^7.1.10",
-    "html-webpack-plugin": "^5.5.3",
-    "style-loader": "^3.3.3",
+    "eslint-plugin-import": "^2.26.0",
+    "hint": "^7.1.1",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.6.3",
+    "jest-environment-jsdom": "^29.0.1",
+    "jest-localstorage-mock": "^2.4.22",
+    "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.0"
   },
   "dependencies": {
     "lodash": "^4.17.21"
-  }
+  },
+  "main": "webpack.config.js"
 }
